Fix safari button alignment

--- a/app/containers/User/styles.css
+++ b/app/containers/User/styles.css
@@ -13,6 +13,8 @@
   width: 90%;
   max-width: 30rem;
   padding: 1rem 3rem 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
